# yesss-bill-downloader

./: .envrc  .gitignore  LICENSE.md  Pipfile  README.md  env-template  pyproject.toml  requirements.txt  run.py  scrapy.cfg  setup.cfg
requirements/: requirements.in  requirements.txt  update.sh
src/: run.py
src/spiders/: yesss_bills.py
src/yesss/: items.py  pipelines.py
src/yesss/spiders/: yesss_bills.py
yesss/: items.py  pipelines.py  settings.py
yesss/spiders/: yesss_bills.py
