[project]
name = "yesss-bill-downloader"
version = "0.1.0"
description = "Download bills from yesss.at"
requires-python = ">=3.12"
dependencies = [
    "scrapy>=2.14.2",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.13.0",
    "pykeepass>=4.1.1.post1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.2",
]

[project.scripts]
yesss-downloader = "run:main"

[tool.ruff]
line-length = 120
src = ["src"]
